infraproject/master/netpol.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-same-namespace
  namespace: infraproject
spec:
  podSelector:
    matchLabels:
      app: mydb 
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: infra
    ports:
      - port: 80
